...
        case .progress:                             return "UIProgressView"
        case .custom(let view):
            return MainActor.assumeIsolated {
                switch view {
                case let view as ProgressView:          return "\(view.style)"
                case let view as ActivityIndicatorView: return "\(view.style)"
                default:                                return "Done"
                }
            }
        }
    }

    var isProgressView: Bool {
...
